policies/gatekeeper/constraints/require-labels-sbom.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-labels-on-workloads
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    namespaces:
      - sbom
  parameters:
    labels:
      - app.kubernetes.io/name
      - app.kubernetes.io/part-of
      - team
      - data-classification
